----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2005-05-08 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_links.php: patch #1196806, add a Privileges tab
      in db view, thanks to Herman van Rink - helmo
    * server_privileges.php: add a back link to the db on which
      we are checking privileges

2005-05-08 Olivier Mueller <om@omnis.ch>
    * scripts/upgrade.pl: new script to let unix admins upgrade phpMyadmin
      with one command and 5 seconds. To be improved, but is working fine
      here (tm).  Based on: http://www.phpmyadmin.net/latest.txt 
    * server_privileges.php: always display the "Add a new user" link 
      on the User overview page (no more need to click on [show all] or
      an initial before)

2005-05-05 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/mysql_charsets.lib.php: bug #1186983, missing character
      sets and collations (temporary workaround)
    * lang/swedish: Updated, thanks to Björn T. Hallberg (bth).

2005-05-04 Marc Delisle  <lem9@users.sourceforge.net>
    * Documentation.html: improvement about PmaAbsoluteUri,
      thanks to Isaac Bennetch - ibennetch

2005-05-03 Marc Delisle  <lem9@users.sourceforge.net>
    * libraries/common.lib.php: bug #1185152, setting collation for a field,
      thanks to Ryan Schmidt - ryandesign

2005-05-02 Marc Delisle  <lem9@users.sourceforge.net>
    * export.php: bug #1123284, avoid double compression when 
      zlib.output_compression is On, thanks to unclef at users.sourceforge.net
    * libraries/common.lib.php: bug #1193223, undefined index htmlexcel_null,
      thanks to Ryan Schmidt - ryandesign

2005-05-01 Marc Delisle  <lem9@users.sourceforge.net>
    * server_status.php: bug #1193225, missing </ul>
    * tbl_properties.inc.php: bug #1193353, js error on creating table

2005-04-30 Marc Delisle  <lem9@users.sourceforge.net>
    * db_operations.php, libraries/tbl_move_copy.php: