@@ -3035,6 +3035,16 @@ To create a new, empty mimetype please see libraries/transformations/template_ge
     not correctly calculated. Also, sorting results of a query like
     &quot;SELECT * from table GROUP BY&quot; ... is problematic.
 </p>
+<h4>
+    [3.13] I get an error when entering <tt>USE</tt> followed by a db name
+    containing an hyphen. 
+</h4>
+<p>
+    The tests I have made with current MySQL 4.1.11 API shows that the
+    API does not accept this syntax for the USE command. Enclosing the
+    db name with backquotes works. For further confusion, no backquotes
+    are needed with command-line mysql.
+</p>
 
 <a name="faqmultiuser"></a><br />
 <h3>[4. ISPs, multi-user installations ]</h3>
